umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_n2o3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["O#n2#v2" "N#n#v3" "O#n2#v2" "N#n#v3" "O#n2#v2"] :bonds [[0 1 "2"] [1 2 "1"] [2 3 "1"] [3 4 "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["O#n2#v2" "N#n#v3" "O#n2#v2" "N#n#v3" "O#n2#v2"] :bonds [[0 1 "2"] [1 2 "1"] [2 3 "1"] [3 4 "2"]] :charge 0 :spin "#u0 #s1"}}}
