umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_ncl3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["N#n#v3" "Cl#n3#v" "Cl#n3#v" "Cl#n3#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["N#n#v3" "Cl#n3#v" "Cl#n3#v" "Cl#n3#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]}
    :success true}}
