umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_no2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "N#c+#u#v3" "1" "O#n2#v2" "2" "O#c-#n3#v"} :bonds [[0 1 "2"] [0 2 "1"]] :charge 0 :spin "#u1 #s2"}} :counts {:success true :output {:atoms {"0" "N#c+#u#v3" "1" "O#n2#v2" "2" "O#c-#n3#v"} :bonds [[0 1 "2"] [0 2 "1"]] :charge 0 :spin "#u1 #s2"}}}
