umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_o3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["O#c-#n3#v" "O#c+#n#v3" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :double]]}
    :success true}
  :counts {
    :output {
      :atoms ["O#c-#n3#v" "O#c+#n#v3" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :double]]}
    :success true}}
